# backend-kasbi

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.postgres  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0473a98e38ea_nullable_user_id_in_document.py  10a86823dfde_chat_history_and_thread.py  7326b0b268be_init.py  75c96012698f_new_document_status.py  769c89e287c7_chat_history_and_thread_table.py  85a54d113388_init.py  978b359dc786_add_content_on_document_vector_table.py  a2a016ad85e1_add_b25_index.py  c5599bba6add_add_vector_table.py  d9e14bba6fc3_add_document_id_on_vector_table.py  f474ad455262_change_thread_title.py
docker/: celery_entrypoint.sh  entrypoint.sh
postgres/: schema.sql
scripts/: admin_seed.py  hf_models.py
scripts/seeder/: admin_seed.py  role_seed.py
src/app/: config.py  database.py  main.py  tasks.py  worker.py
src/app/agents/: __init__.py  graph.py
src/app/agents/database/: __init__.py  database.py
src/app/agents/models/: __init__.py  models.py
src/app/agents/prompts/: __init__.py  prompts.py
src/app/agents/retriever/: __init__.py  retriever.py
src/app/models/: __init__.py  base.py  document.py  history.py  role.py  user.py
src/app/routers/: admin.py  auth.py  chatbot.py  whatsapp.py
src/app/schemas/: admin.py  auth.py  chatbot.py  common.py  state.py
src/app/security/: dependencies.py  jwt.py  passwords.py  permissions.py
