[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic>=1.18.1",
    "docling>=2.68.0",
    "fastapi>=0.128.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "flashrank>=0.2.10",
    "langchain>=1.2.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.6",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sqlmodel>=0.0.31",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv] 
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  {  index = "pytorch-cu126"},
]
torchvision = [
  {  index = "pytorch-cu126"},
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.26",
]
